--- a/Project.toml
+++ b/Project.toml
@@ -5,22 +5,20 @@ git_url = "https://github.com/Electa-Git/LineCableModels.jl"
 version = "0.1.1-DEV"
 
 [deps]
-CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DisplayAs = "0b91fe84-8a4c-11e9-3e1d-67c38462b6d6"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 ForceImport = "9dda63f9-cce7-5873-89fa-eccbb2fffcde"
-Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
 GetDP = "dbfd83e6-7aba-450b-9c2b-93ccd973023a"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
@@ -28,8 +26,6 @@ MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
-PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
-PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
@@ -43,27 +39,25 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 
-[sources.GetDP]
-rev = "main"
-url = "https://github.com/Electa-Git/GetDP.jl"
+[sources]
+GetDP = {rev = "main", url = "https://github.com/Electa-Git/GetDP.jl"}
 
 [compat]
-CSV = "0.10.15"
+Aqua = "0.8"
 CairoMakie = "0.15"
 Calculus = "0.5.2"
 ColorSchemes = "3.27.1"
 Colors = "0.13.0"
 DataFrames = "1.7.0"
 Dates = "1.11.0"
-DelimitedFiles = "1.9.1"
 DisplayAs = "0.1.6"
 DocStringExtensions = "0.9.3"
 EzXML = "1.2.0"
 ForceImport = "0.0.3"
-Functors = "0.5.2"
 GLMakie = "0.13"
 Gmsh = "0.3.1"
 JSON3 = "1.14.2"
+LaTeXStrings = "1.4.0"
 LinearAlgebra = "1.11.0"
 Logging = "1.11.0"
 LoggingExtras = "1.1.0"
@@ -71,8 +65,6 @@ MacroTools = "0.5.16"
 Makie = "0.24.6"
 Measurements = "2.11.0"
 Pkg = "1.11.0"
-PkgTemplates = "0.7.56"
-PlotlyJS = "0.18.15"
 Plots = "1.40.9"
 Printf = "1.11.0"
 QuadGK = "2.11.2"
@@ -85,10 +77,11 @@ UUIDs = "1.11.0"
 WGLMakie = "0.13"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 
 [targets]
-test = ["Test", "Coverage", "SafeTestsets", "TestItemRunner"]
+test = ["Test", "Coverage", "SafeTestsets", "TestItemRunner", "Aqua"]
